Add description in README.md

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -414,7 +414,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\imitator{} is an open source software tool to perform automated parameter synthesis for concurrent timed systems.
+\imitator{} is an open source software tool to perform automated parameter synthesis for concurrent timed systems~\cite{AFKS12}.
 \imitator{} takes as input a network of parametric timed automata~\cite{AHV93}, a well-known formalism to specify and verify models of systems where timing constants can be replaced with parameters, \ie{} unknown constants.
 
 \imitator{} addresses several variants of the following problem:
@@ -431,9 +431,7 @@ Numerous benchmarks are available at \imitator{} Web page~\cite{imitator}.
 In this document, we present the input syntax, we formally define the input model of \imitator{}, and we explain how to perform various analyses using the numerous options.
 
 
-% TODO
-% TODO: say no GUI, but refer to CosyVerif	
-
+\paragraph{Keywords:} formal verification, model checking, software verification, parameter synthesis
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
