--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -361,22 +361,26 @@
 
 \mbox{}
 
-\vspace{3cm}
+\vspace{2cm}
 
 \begin{center}
 	{\Huge \bfseries IMITATOR User Manual}
 
 	\vspace{2cm}
 
-	\includegraphics[width=0.40\textwidth]{include/logo.jpg}
+	\includegraphics[width=0.40\textwidth]{../logos/imitator-500.png}
 
 	\vspace{2cm}
 	
 	{\Large Version \imitatorversion{} (\imitatorversionname{})}
 	
+	\medskip
+	
+	\includegraphics[width=0.30\textwidth]{../logos/logo2-7-300.png}
+
 \end{center}
 
-\vspace{3cm}
+\vspace{2cm}
 
 {\small \hfill{}Build \input{../build_number.txt}}
 
@@ -2136,10 +2140,20 @@ This user manual is available under the Creative Commons CC-BY-SA license.
 
 \bigskip
 
-\subsection*{Credits}
-\imitator{}'s logo comes from KaterBegemot's \stylePath{Typing monkey.svg} (Licence: Creative Commons Attribution-Share Alike 3.0 Unported).
+\subsection*{Graphics Credits}
+	% TODO: nice tabular showing images
+
+\paragraph{\imitator{}'s logo} comes from \stylePath{Typing monkey.svg} by KaterBegemot on Wikimedia Commons
+	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
 
 \url{https://commons.wikimedia.org/wiki/File:Typing_monkey.svg}
+
+
+\paragraph{\imitator{}'s 2.7 version logo} comes from  \stylePath{Andouille-Scheiben.jpg} by Pwagenblast on Wikimedia Commons
+	(License: Creative Commons Attribution 3.0 Unported).
+The background erasing was done by Fabrice~Kordon.
+
+\url{https://commons.wikimedia.org/wiki/File:Andouille-Scheiben.jpg}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
