--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2127,6 +2127,16 @@ The following people contributed to the development of \imitator{}.
 	Romain Soulat & 2010 & -- & 2013 \\
 \end{tabular}
 
+\bigskip
+
+The following people contributed to the compiling and packaging facilities.
+
+\begin{tabular}{l l @{ } c @{ } l}
+	Corentin Guillevic & 2015 & & \\
+	Sarah Hadbi & 2015 & & \\
+	Fabrice Kordon & 2015 & -- & \\
+	Alban Linard & 2014 & -- \\
+\end{tabular}
 
 
 \bigskip
