IMITATOR now supports urgent locations

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -333,7 +333,7 @@
 
 \lstdefinelanguage{Imitator}{
 	morekeywords={
-		and, automaton, clock, discrete, do, end, endreach, False, forward, from, goto, if, in, init, initially, loc, locations, not, or, parameter, print, reach, region, sync, synclabs, True, var, wait, when, while
+		and, automaton, clock, discrete, do, end, endreach, False, forward, from, goto, if, in, init, initially, loc, locations, not, or, parameter, print, reach, region, unreachable, urgent, sync, synclabs, True, var, wait, when, while
 	},
 	sensitive=false,
 % 	morecomment=[l][\color{gray}]{--},
@@ -1993,6 +1993,7 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{then},
 \styleIMI{True},
 \styleIMI{unreachable},
+\styleIMI{urgent},
 \styleIMI{var},
 \styleIMI{wait},
 \styleIMI{when},
