--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -227,11 +227,14 @@
 	author = {Andr{\'e}, {\'E}tienne and Markey, Nicolas},
 	title = {Language Preservation Problems in Parametric Timed Automata},
 	booktitle = {Proceedings of the 13th International Conference on Formal Modeling and Analysis of Timed Systems (FORMATS'15)},
+	doi = {10.1007/978-3-319-22975-1_3},
 	editor = {Sankaranarayanan, Sriram and Vicario, Enrico},
 	location = {Madrid, Spain},
 	month = sep,
+	pages = {27--43},
 	publisher = {Springer},
 	series    = {Lecture Notes in Computer Science},
+	volume = {9268},
 	year = {2015},
 	lipn-category = {intc},
 	keywords = {intc},
